# diffuplug

./: CHANGELOG.md  GENERATION_COMPARISON.md  INSTALL.md  README.md  VLLM_COMPATIBILITY.md  example_usage.py  pyproject.toml  setup.py  test_cpu_support.py
Diffulex/d2f_engine/engine/: sequence.py
Diffulex/d2f_engine/layers/: linear.py
Diffulex/d2f_engine/layers/attention/: attention_v5.py
Diffulex/d2f_engine/models/: llada.py
Diffulex/examples/: README_test_dream.md  test_dream_dvllm_gsm8k.py  test_dream_dvllm_human_eval.py
dllm_plugin/: INSTALL.md  README.md  example_usage.py  setup.py  test_detection.py  test_model_forward.py  test_patching.py
dllm_plugin/dllm_plugin/: __init__.py  generation.py  generation_new.py  llada_sampler.py
dllm_plugin/dllm_plugin/models/: __init__.py  dream.py  llada.py
docs/: CHANGELOG.md  CPU_SUPPORT_COMPLETE.md  CUSTOM_DIFFUSION_IMPLEMENTATION.md  DEPENDENCIES.md  DIFFULEX_CPU_PATCH.md  IMPLEMENTATION_COMPLETE.md  INVESTIGATION_SUMMARY.md  SAMPLER_FIX_README.md
src/dllm_plugin/: __init__.py  generation.py  generation.py.backup  generation_new.py  llada_sampler.py
src/dllm_plugin/models/: llada.py  llada.py.bak
test_scripts/: compare_models.py  diagnose_generation.py  run_reference_direct.py  simple_weight_check.py  test_hf_model.py  test_new_sampler.py  test_prefix_caching.py  test_reference_generation.py  test_reference_params.py  test_vllm_integration.py  verify_model_weights.py  verify_weights.py
tests/: README.md  __init__.py  conftest.py  test_models.py  test_plugin_registration.py  test_sampler.py
(+1 files in other folders)
