[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "dllm_plugin"
version = "0.1.0"
description = "vLLM plugin for Diffusion Language Models (Dream and LLaDA)"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
authors = [
    {name = "dllm_plugin contributors"}
]
keywords = ["vllm", "diffusion", "language-models", "inference", "plugin"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "vllm>=0.6.0",
    "torch>=2.0.0",
    "transformers>=4.30.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/dllm_vllm_plugin"
Documentation = "https://github.com/yourusername/dllm_vllm_plugin/blob/main/README.md"

[project.entry-points."vllm.general_plugins"]
register_dllm_models = "dllm_plugin:register"

[tool.setuptools]
packages = ["dllm_plugin", "dllm_plugin.models"]

[tool.setuptools.package-data]
dllm_plugin = ["py.typed"]
